Added ci and jacoco with test properties